replace URL() constructors with URI()